# Sauron

./: .gitignore  BUILD_GUIDE.md  DEVELOPMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  env.prod.example
backend/: .coverage  .coveragerc  Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml  pytest.ini  run_tests_with_coverage.sh
backend/alerts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/alerts/migrations/: 0001_initial.py  0002_alert_cooldown_period_alert_enabled_and_more.py
backend/auth/: urls.py  views.py
backend/authentication/: urls.py  views.py
backend/core/: asgi.py  security.py  settings.py  test_settings.py  urls.py
backend/events/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_event_acknowledged_event_acknowledged_at_and_more.py
backend/healthchecks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/healthchecks/migrations/: 0001_initial.py  0002_healthcheck_duration_healthcheck_error_code_and_more.py
backend/monitoring/: broadcast.py  consumers.py  event_monitor.py  health_checker.py  health_checks.py  metrics_collector.py  middleware.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
backend/monitoring/migrations/: 0001_initial.py
backend/monitoring/tests/: __init__.py  test_dashboard_views.py
backend/services/: admin.py  docker_service.py  models.py  serializers.py  service_discovery.py  tests.py  urls.py  views.py
(+64 files in other folders)
